# Steam-Save-Monitor

./: Dependencies.txt  README.md  overlay.html  package.json  tailwind.config.cjs  vite.config.ts
src/: App.tsx  index.css  index.html  overlay-main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: achievement_scanner.rs  achievement_watcher.rs  achievements.rs  config.rs  ludusavi.rs  main.rs  notifications.rs  overlay.rs  process_monitor.rs  steam_achievements.rs  steam_monitor.rs
src/components/: AchievementToast.css  AchievementToast.tsx  Overlay.tsx  RarityCustomizer.tsx
src/types/: rarityTypes.ts
