[package]
name = "steam-backup-manager"
version = "1.0.0"
description = "Automatic Steam game save backup with Ludusavi"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "dialog-confirm", "dialog-ask", "window-minimize", "dialog-open", "window-maximize", "window-start-dragging", "notification-all", "shell-open", "system-tray", "window-hide", "window-show", "window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"
dirs = "5.0"
windows = { version = "0.54.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Media_Audio"] }
notify-rust = "4"
notify = "6.1"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
ini = "1.3"
chrono = "0.4"
steamworks = "0.11"
urlencoding = "2.1"
scraper = "0.17"
base64 = "0.21"
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
